[tool.poetry]
name = "aprs_tocall"
version = "0.1.0"
description = "Parses APRS \"tocalls\" or tocalls.txt / tocalls.yaml easily in Python"
authors = ["xss <michaela@michaela.lgbt>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
